blogs: highlight before markdown

--- a/src/app/page/blog/blog.component.html
+++ b/src/app/page/blog/blog.component.html
@@ -21,10 +21,8 @@
     <div class="feed-card">
         <div class="title" [innerHTML]="item.title | texthigh:query:'partial'"></div>
         {{ item.published | date:"dd-MMM-yyyy HH:mm" }}
-        <div [innerHtml]="dataService.processMDHTML(item.content | markdown) 
-        || item.content | texthigh:query:'partial'" class="markdown"></div>
-        <div>By</div>
-        <div *ngIf="external" [innerHTML]="item.body | texthigh:query:'partial'"></div>
+        <div [innerHtml]="(dataService.processMDHTML((item.content | texthigh:query:'partial')|markdown))" class="markdown"></div>
+        <div *ngIf="external">By</div><div *ngIf="external" [innerHTML]="item.body | texthigh:query:'partial'"></div>
     </div>
   </ng-container>
 </div>
