make and change lines between two coordinates when changed

--- a/src/app/page/map/map.component.html
+++ b/src/app/page/map/map.component.html
@@ -32,6 +32,7 @@
      (panup)="mobileShowLoc(true)"
      (pandown)="mobileShowLoc(false)">
 
+
   <div class="edit-loc" *ngIf="editing">
     <mat-form-field>
       <input matInput type="text" [(ngModel)]="selLocationAnim.name" placeholder="Name" />
@@ -63,6 +64,14 @@
             *ngIf="hasUpdateRole()">
         Update
     </button>
+    <button mat-button
+            class="directions-button"
+            (click)="setDirections()">
+      Directions
+    </button>
+    <!-- <div id="comp-render" *ngIf="display">
+      <button>hola </button>
+    </div> -->
   </ng-container>
 </div>
 
