--- a/src/app/page/map/map.component.css
+++ b/src/app/page/map/map.component.css
@@ -47,6 +47,17 @@
     font-family: 'Segoe UI' initial;
 }
 
+#directions {
+    padding: 15px 20px;
+    box-sizing: border-box;
+    position: fixed;
+    right: 700px; top: 160px;
+    background: white;
+    width: 300px;
+    z-index: 2;
+    font-family: 'Segoe UI' initial;
+}
+
 #infobox.editing {
     width: 700px;
 }
@@ -89,6 +100,28 @@
 .update-button {
     margin-top: 2px;
     float: right;
+}
+
+.directions-button {
+    margin-block-start: 4px;
+    background-color: #2070e9; /* Bluish Shade */
+    border: none;
+    color: white;
+    padding: 5px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+#comp-render {
+    margin-block-start: 4px;
+    border: none;
+    background-color:#fe1206;
+    padding: 5px 8px;
+    color: white;
+    display: inline-block;
+    font-size: 16px;
+    text-align: left;
 }
 
 .only-mobile {
