--- a/src/app/page/map/map.component.html
+++ b/src/app/page/map/map.component.html
@@ -6,29 +6,28 @@
   <img id="user-marker" src="/assets/map/marker_red_s.png">
 </div>
 
-<div id="searchbox" class="mat-elevation-z3" [@enterFade]="bstr(true)">
+<div id="searchbox" class="mat-elevation-z3" [@enterFade]="bstr(true)" >
   <input class="search" type="search" #searchbox placeholder="Search" [matAutocomplete]="auto"
-    [formControl]="searchForm" (keyup.enter)="searchChanged($event)">
-  <mat-autocomplete name="locsauto" #auto (optionSelected)="searchChanged($event)">
+    [formControl]="searchForm" (keyup.enter)="searchChanged($event, 1)">
+  <mat-autocomplete name="locsauto" #auto (optionSelected)="searchChanged($event, 1)">
     <mat-option *ngFor="let loc of filteredOptions | async" [value]="loc.name">
       {{ loc.name }}
     </mat-option>
   </mat-autocomplete>
 </div>
 
-<div id="searchbox2" class="mat-elevation-z3" [@enterFade]="bstr(true)" *ngIf="showingDirections">
+<div id="searchbox2" class="mat-elevation-z3" [@enterFade]="bstr(true)" *ngIf="showingDirections" >
   <input class="search" type="search" #searchbox2 placeholder="Search" [matAutocomplete]="auto2"
-    [formControl]="searchForm2" (keyup.enter)="searchChanged($event)">
-  <mat-autocomplete name="locsauto" #auto2 (optionSelected)="searchChanged($event)">
-    <mat-option *ngFor="let loc of filteredOptions2 | async" [value]="loc.name">
+    [formControl]="searchForm2" (keyup.enter)="searchChanged($event, 2)">
+  <mat-autocomplete name="locsauto" #auto2 (optionSelected)="searchChanged($event, 2)">
+    <mat-option *ngFor="let loc of filteredOptions2 | async" [value]="loc.name" >
       {{ loc.name }}
     </mat-option>
   </mat-autocomplete>
 </div>
 
 <div id="infobox" *ngIf="initLocBox" [@enterFade]="bstr(showLocBox)" class="infobox mat-elevation-z3"
-  [class.expanded]="mobShowLocBox" [class.editing]="editing" [class.showingDirections]="showingDirections" (panup)="mobileShowLoc(true)"
-  (pandown)="mobileShowLoc(false)">
+  [class.expanded]="mobShowLocBox" [class.editing]="editing" [class.showingDirections]="showingDirections" (click)="mobileShowLoc(!mobShowLocBox)">
 
 
   <div class="edit-loc" *ngIf="editing">
@@ -50,18 +49,21 @@
       (pandown)="mobileShowLoc(false)">
       {{ selLocationAnim.description }}
     </div>
-    <button mat-button class="update-button" color="warn" (click)="showDirections()">
+    <button mat-button class="update-button" color="warn" (click)="showDirections()" *ngIf="!gotDirections">
+       Get Location
+    </button>
+    <button mat-button class="update-button" color="warn" (click)="setDirections()" *ngIf="gotDirections">
       Directions
     </button>
     <button mat-button class="update-button" color="warn" (click)="updateLocation(selLocationAnim)"
       *ngIf="hasUpdateRole()">
       Update
     </button>
-    <button mat-button
+    <!-- <button mat-button
             class="directions-button"
             (click)="setDirections()">
       Directions
-    </button>
+    </button> -->
     <!-- <div id="comp-render" *ngIf="display">
       <button>hola </button>
     </div> -->
