--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,72 @@
 .example-toolbar {
     position: fixed;
-    z-index: 100;
+    z-index: 52;
 }
-
+.darkness{
+    position: fixed;
+    top: 0%;
+    left: 0;
+    z-index: 55;
+    background-color: #333;
+    opacity: 1;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.close-btn{
+position: fixed;
+top: 3vw;
+right:3vw;
+color: white;
+font-size: 20px;  
+cursor: pointer;      
+}
+.share-btn{
+    position: relative;
+    color: #536dfe;
+    left: -11vw;
+    z-index: 60;
+    top: 27vh;
+    cursor: pointer;
+}
+.popup-post{
+    position: fixed;
+    top: 30vh;
+    left: 30vw;
+    height:40vh;
+    width: 40vw;
+    overflow-x: scroll;
+    z-index: 56;
+}
+.img-xscroll{
+    height: 98.65%;
+    opacity: 1;
+}
+.cake-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bday-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 56;
+}
+.bday-card-img{
+    position: relative;
+    width: 20vw;  
+    z-index: 56; 
+    opacity: 1;
+}
+.cake-img{
+    width: 35px;
+    border-radius: 50%;
+    border: 2.5px solid #f47c57;
+    outline: 2.5px solid white;
+}
 #router-out {
     bottom: 0;
     padding-top: 0;
@@ -54,7 +118,7 @@
     height: 100vh;
     width: 3vw;
     max-width: 12px;
-    z-index: 800;
+    z-index: 400;
 }
 
 .fill-space {
