--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -114,6 +114,14 @@ cursor: pointer;
     #top-gap {
         height: 44px;
     }
+    .popup-post{
+        position: fixed;
+        top: 25vh;
+        overflow-x: scroll;
+        height: 75vw;
+        width: 75vw;
+        z-index: 56;
+    }
 }
 
 #swipe-right-area {
