--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -56,7 +56,7 @@
     routerLinkActive="active-link"
     mat-list-item
   >
-    <mat-icon>forum</mat-icon> &nbsp; Community Discussion
+    <mat-icon>forum</mat-icon> &nbsp; Communities
   </a>
 
   <a
