added the last updated feature in mess menu

--- a/src/app/page/map/map.component.html
+++ b/src/app/page/map/map.component.html
@@ -46,6 +46,7 @@
     <div
       id="searchbox-origin"
       class="mat-elevation-z3"
+      ngClass="searchandinfoboxposition ? hidden : 'searchbox_origin'"
       [@enterFade]="bstr(true)"
     >
       <!--  -->
