--- a/src/app/page/map/map.component.css
+++ b/src/app/page/map/map.component.css
@@ -49,6 +49,7 @@
   z-index: 2;
 }
 
+
 #infobox #direction,
 #yourLocation {
   background-color: #536dfe;
@@ -145,7 +146,7 @@
     top: 10px;
   }
   
-  #searchbox-origin {
+  .searchbox-origin {
     display: flex;
     flex-direction: column;
     position: fixed;
