--- a/src/app/page/explore/explore.component.css
+++ b/src/app/page/explore/explore.component.css
@@ -7,6 +7,7 @@
     background-color: #f2f2f2;
     border-radius: 4px;
     width: 42%;
+    max-width: 500px;
     margin-bottom: 0.5em;
     margin-left: 1%;
     display: inline-block;
