Updated long description field name

--- a/src/app/page/add-event/add-event.component.html
+++ b/src/app/page/add-event/add-event.component.html
@@ -117,7 +117,7 @@
 
       <div>
         <mat-form-field class="full-width-details">
-          <textarea matInput placeholder="Long Description" [(ngModel)]="event.longdescription" rows=8></textarea>
+          <textarea matInput placeholder="Email Content" [(ngModel)]="event.longdescription" rows=8></textarea>
         </mat-form-field>
       </div>
 
