--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @include mat.core();
 
 /* For use in src/lib/core/theming/_palette.scss */
