--- a/src/app/page/achievements/achievement-request/achievement-request.component.html
+++ b/src/app/page/achievements/achievement-request/achievement-request.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-elevation-z0">
+<mat-card appearance="outlined" class="mat-elevation-z0">
   <mat-card-header>
     <img mat-card-avatar [src]="getImage()">
     <mat-card-title>{{ achievement.title }}</mat-card-title>
