--- a/src/app/page/calendar/calendar.component.html
+++ b/src/app/page/calendar/calendar.component.html
@@ -25,11 +25,11 @@
                     primaryColor="#536dfe">
         </xunk-calendar>
 
-        <mat-chip-list class="mat-chip-list-stacked">
-            <mat-chip color="accent" selected="true" id="head-chip">
+        <mat-chip-listbox class="mat-chip-list-stacked">
+            <mat-chip-option color="accent" selected="true" id="head-chip">
                 <div>{{ GetCount(selDate) }}</div>
-            </mat-chip>
-        </mat-chip-list>
+            </mat-chip-option>
+        </mat-chip-listbox>
 
         <br>
 
