--- a/src/app/page/query-search/query-new/query-new.component.html
+++ b/src/app/page/query-search/query-new/query-new.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-card>
+  <mat-card appearance="outlined">
     <mat-card-title>Couldn't find what you're looking for ?</mat-card-title>
     <mat-divider></mat-divider>
     <mat-card-content>
