--- a/src/styles.css
+++ b/src/styles.css
@@ -179,7 +179,7 @@ mat-form-field, mat-form-field *, .markdown *, input {
 .rl-header.xs { font-size: 1.4em; }
 
 /* For Create-Post & Close-popup Dialogbox  */
-.custom-container .mat-dialog-container {
+.custom-container .mat-mdc-dialog-container {
     border-radius: 20px !important;
  }
 
