--- a/src/theme.scss
+++ b/src/theme.scss
@@ -78,9 +78,9 @@ $md-caccent: (
     )
 );
 
-$md-primary: mat.define-palette($md-cprimary, 500, 100, 700);
-$md-accent: mat.define-palette($md-caccent, 500, 300, 800);
-$md-warn: mat.define-palette(mat.$red-palette, 500, 300, 900);
+$md-primary: mat.m2-define-palette($md-cprimary, 500, 100, 700);
+$md-accent: mat.m2-define-palette($md-caccent, 500, 300, 800);
+$md-warn: mat.m2-define-palette(mat.$m2-red-palette, 500, 300, 900);
 
 $my-theme-foreground: (
   base: black,
@@ -100,20 +100,20 @@ $my-theme-foreground: (
 );
 
 $my-theme-background: (
-  status-bar: map_get(mat.$grey-palette, 300),
-  app-bar:    map_get(mat.$grey-palette, 100),
-  background: map_get(mat.$grey-palette, 50),
+  status-bar: map_get(mat.$m2-grey-palette, 300),
+  app-bar:    map_get(mat.$m2-grey-palette, 100),
+  background: map_get(mat.$m2-grey-palette, 50),
   hover:      rgba(black, 0.04),
   card:       white,
   dialog:     white,
   disabled-button: rgba(black, 0.12),
   raised-button: white,
   focused-button: rgba(black, 0.12),
-  selected-button: map_get(mat.$grey-palette, 300),
-  selected-disabled-button: map_get(mat.$grey-palette, 400),
-  disabled-button-toggle: map_get(mat.$grey-palette, 200),
-  unselected-chip: map_get(mat.$grey-palette, 300),
-  disabled-list-option: map_get(mat.$grey-palette, 200),
+  selected-button: map_get(mat.$m2-grey-palette, 300),
+  selected-disabled-button: map_get(mat.$m2-grey-palette, 400),
+  disabled-button-toggle: map_get(mat.$m2-grey-palette, 200),
+  unselected-chip: map_get(mat.$m2-grey-palette, 300),
+  disabled-list-option: map_get(mat.$m2-grey-palette, 200),
 );
 
 $theme: (
