--- a/src/theme.scss
+++ b/src/theme.scss
@@ -8,7 +8,8 @@
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy(mat.define-typography-config());`
 @include mat.all-component-typographies();
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 /* For use in src/lib/core/theming/_palette.scss */
 $md-cprimary: (
