--- a/src/app/page/add-event/add-event.component.html
+++ b/src/app/page/add-event/add-event.component.html
@@ -1,76 +1,142 @@
 <app-xunk-spinner *ngIf="!event || !tagCategoryList"></app-xunk-spinner>
 
-<app-desktop-split *ngIf="event && tagCategoryList" [rightLeftBorder]="false" [centerRightBorder]="true">
-
+<app-desktop-split
+  *ngIf="event && tagCategoryList"
+  [rightLeftBorder]="false"
+  [centerRightBorder]="true"
+>
   <div center id="main">
-
     <div class="theme-header">
-      <input style="display:none;" type="file" accept="image/*" #file id="file"
-        (change)="uploadImage($event.target.files)">
-      <img class="header-image" [src]="getImageUrl()" src-fallback="assets/add_image_placeholder.svg"
-        (click)="file.click()">
+      <input
+        style="display: none"
+        type="file"
+        accept="image/*"
+        #file
+        id="file"
+        (change)="uploadImage($event.target.files)"
+      />
+      <img
+        class="header-image"
+        [src]="getImageUrl()"
+        src-fallback="assets/add_image_placeholder.svg"
+        (click)="file.click()"
+      />
 
       <div class="card-header primary-background-color">
         <mat-form-field color="accent" class="full-width-details">
-          <input [(ngModel)]="event.name" matInput required #eventName name="event_name" placeholder="Event Name">
+          <input
+            [(ngModel)]="event.name"
+            matInput
+            required
+            #eventName
+            name="event_name"
+            placeholder="Event Name"
+          />
           <mat-hint align="end">{{ eventName.value.length }} / 50</mat-hint>
         </mat-form-field>
       </div>
     </div>
 
-
-
     <div class="details-view full-width">
-      <div style="display:flex;">
+      <div style="display: flex">
         <mat-form-field class="half-width middle-gap">
-          <input (change)="timeChanged()" [(ngModel)]="start_date" matInput [matDatepicker]="fromPicker"
-            placeholder="From" required>
-          <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+          <input
+            (change)="timeChanged()"
+            [(ngModel)]="start_date"
+            matInput
+            [matDatepicker]="fromPicker"
+            placeholder="From"
+            required
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="fromPicker"
+          ></mat-datepicker-toggle>
           <mat-datepicker #fromPicker></mat-datepicker>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input (change)="timeChanged()" [(ngModel)]="end_date" matInput [matDatepicker]="toPicker" placeholder="To"
-            required>
-          <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
+          <input
+            (change)="timeChanged()"
+            [(ngModel)]="end_date"
+            matInput
+            [matDatepicker]="toPicker"
+            placeholder="To"
+            required
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="toPicker"
+          ></mat-datepicker-toggle>
           <mat-datepicker #toPicker></mat-datepicker>
         </mat-form-field>
       </div>
-      <div style="display:flex;">
+      <div style="display: flex">
         <mat-form-field class="half-width middle-gap">
-          <input (change)="timeChanged()" [(ngModel)]="start_time" matInput placeholder="Time" type="time" required>
+          <input
+            (change)="timeChanged()"
+            [(ngModel)]="start_time"
+            matInput
+            placeholder="Time"
+            type="time"
+            required
+          />
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input (change)="timeChanged()" [(ngModel)]="end_time" matInput placeholder="Time" type="time" required>
+          <input
+            (change)="timeChanged()"
+            [(ngModel)]="end_time"
+            matInput
+            placeholder="Time"
+            type="time"
+            required
+          />
         </mat-form-field>
       </div>
 
       <div *ngFor="let vn of event.venues; let i = index">
         <mat-form-field class="full-width-details venue">
-          <input matInput placeholder="Venue" aria-label="Venue" [matAutocomplete]="venueAuto"
-            [formControl]="venueControls[i].form">
+          <input
+            matInput
+            placeholder="Venue"
+            aria-label="Venue"
+            [matAutocomplete]="venueAuto"
+            [formControl]="venueControls[i].form"
+          />
         </mat-form-field>
 
         <mat-autocomplete #venueAuto="matAutocomplete">
-          <mat-option *ngFor="let venue of venueControls[i].filteredLocations | async" [value]="venue.short_name">
+          <mat-option
+            *ngFor="let venue of venueControls[i].filteredLocations | async"
+            [value]="venue.short_name"
+          >
             {{ venue.short_name }}
           </mat-option>
         </mat-autocomplete>
 
-        <button *ngIf="i==0" (click)="AddVenue()" mat-icon-button>
+        <button *ngIf="i == 0" (click)="AddVenue()" mat-icon-button>
           <mat-icon>add</mat-icon>
         </button>
-        <button *ngIf="i!=0" (click)="RemoveVenue(i)" mat-icon-button>
+        <button *ngIf="i !== 0" (click)="RemoveVenue(i)" mat-icon-button>
           <mat-icon>remove</mat-icon>
         </button>
       </div>
 
       <div>
         <mat-form-field class="full-width-details">
-          <mat-select [(ngModel)]="event.bodies_id" placeholder="Bodies" multiple required>
+          <mat-select
+            [(ngModel)]="event.bodies_id"
+            placeholder="Bodies"
+            multiple
+            required
+          >
             <mat-option *ngFor="let body of bodies" [value]="body.id">
               {{ body.name }}
             </mat-option>
-            <mat-option *ngFor="let body of disabledBodies" [value]="body.id" disabled>
+            <mat-option
+              *ngFor="let body of disabledBodies"
+              [value]="body.id"
+              disabled
+            >
               {{ body.name }}
             </mat-option>
           </mat-select>
@@ -79,11 +145,22 @@
 
       <div>
         <mat-form-field class="full-width-details">
-          <mat-select [(ngModel)]="event.verification_bodies_id" placeholder="Verification Bodies" multiple>
-            <mat-option *ngFor="let verification_body of verification_bodies" [value]="verification_body.id">
+          <mat-select
+            [(ngModel)]="event.verification_bodies_id"
+            placeholder="Verification Bodies"
+            multiple
+          >
+            <mat-option
+              *ngFor="let verification_body of verification_bodies"
+              [value]="verification_body.id"
+            >
               {{ verification_body.name }}
             </mat-option>
-            <mat-option *ngFor="let body of disabledBodies" [value]="body.id" disabled>
+            <mat-option
+              *ngFor="let body of disabledBodies"
+              [value]="body.id"
+              disabled
+            >
               {{ body.name }}
             </mat-option>
           </mat-select>
@@ -91,33 +168,55 @@
       </div>
 
       <div class="full-width-details">
-        <app-search-box exploreProp="interests" displayProp="title" placeholder="Notify according to interests"
-          hint="Enter a Interest" (change)="setInterest($event)">
+        <app-search-box
+          exploreProp="interests"
+          displayProp="title"
+          placeholder="Notify according to interests"
+          hint="Enter a Interest"
+          (change)="setInterest($event)"
+        >
         </app-search-box>
 
-        <app-interest-card *ngFor="let interest of event.event_interest" [interest]=interest [canDelete]=true
-          [deleteMethod]="deleteInterestFunc">
-
+        <app-interest-card
+          *ngFor="let interest of event.event_interest"
+          [interest]="interest"
+          [canDelete]="true"
+          [deleteMethod]="deleteInterestFunc"
+        >
         </app-interest-card>
-
       </div>
 
       <div>
         <mat-form-field class="full-width-details">
-          <input matInput placeholder="Website URL" [(ngModel)]="event.website_url" rows=8>
+          <input
+            matInput
+            placeholder="Website URL"
+            [(ngModel)]="event.website_url"
+            rows="8"
+          />
         </mat-form-field>
       </div>
 
       <div>
         <mat-form-field class="full-width-details">
-          <textarea matInput placeholder="Description" [(ngModel)]="event.description" rows=8>
-        </textarea>
+          <textarea
+            matInput
+            placeholder="Description"
+            [(ngModel)]="event.description"
+            rows="8"
+          >
+          </textarea>
         </mat-form-field>
       </div>
 
       <div>
         <mat-form-field class="full-width-details">
-          <textarea matInput placeholder="Email Content" [(ngModel)]="event.longdescription" rows=8></textarea>
+          <textarea
+            matInput
+            placeholder="Email Content"
+            [(ngModel)]="event.longdescription"
+            rows="8"
+          ></textarea>
         </mat-form-field>
       </div>
 
@@ -125,21 +224,23 @@
         <div class="full-width-details">
           <div class="label tag-category">
             Offered Achievements
-            <button mat-button class="has float-right" (click)="addOffer()">Add</button>
-            <div class="sub">
-              Make your event stand out
-            </div>
+            <button mat-button class="has float-right" (click)="addOffer()">
+              Add
+            </button>
+            <div class="sub">Make your event stand out</div>
           </div>
 
           <mat-accordion>
             <mat-expansion-panel *ngFor="let offer of offeredAchievements">
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  {{ offer.title ? offer.title : 'Untitled Achievement' }}
+                  {{ offer.title ? offer.title : "Untitled Achievement" }}
                 </mat-panel-title>
                 <mat-panel-description>
                   <ng-container *ngIf="offer.stat > 0">
-                    <ng-container *ngIf="offer.stat === 1; then success else fail"></ng-container>
+                    <ng-container
+                      *ngIf="offer.stat === 1; then success; else fail"
+                    ></ng-container>
                   </ng-container>
                   <ng-template #success>
                     <span style="color: green">Success</span>
@@ -150,8 +251,17 @@
                 </mat-panel-description>
               </mat-expansion-panel-header>
 
-              <app-achievement-offer-make [offer]="offer" [bodies]="bodies"></app-achievement-offer-make>
-              <button mat-button class="float-right" (click)="removeOffer(offer)">Remove</button>
+              <app-achievement-offer-make
+                [offer]="offer"
+                [bodies]="bodies"
+              ></app-achievement-offer-make>
+              <button
+                mat-button
+                class="float-right"
+                (click)="removeOffer(offer)"
+              >
+                Remove
+              </button>
             </mat-expansion-panel>
           </mat-accordion>
         </div>
@@ -162,10 +272,14 @@
           <div class="label">
             Restricted Audience
             <div class="sub">
-              Event will be visible only to selected audiences<br>
-              Do not select anything if the event is open for everyone<br>
+              Event will be visible only to selected audiences<br />
+              Do not select anything if the event is open for everyone<br />
               Current estimated reach:
-              <mat-spinner *ngIf="reach === null" class="spinner" diameter="14"></mat-spinner>
+              <mat-spinner
+                *ngIf="reach === null"
+                class="spinner"
+                diameter="14"
+              ></mat-spinner>
               <ng-container *ngIf="reach !== null">{{ reach }}</ng-container>
             </div>
           </div>
@@ -176,7 +290,13 @@
                   {{ cat.name }}
                 </mat-panel-title>
                 <mat-panel-description>
-                  <ng-container *ngIf="isCategoryRestricted(cat);then restricted else unrestricted"></ng-container>
+                  <ng-container
+                    *ngIf="
+                      isCategoryRestricted(cat);
+                      then restricted;
+                      else unrestricted
+                    "
+                  ></ng-container>
                   <ng-template #restricted>
                     <span style="color: red">Restricted</span>
                   </ng-template>
@@ -187,11 +307,15 @@
               </mat-expansion-panel-header>
 
               <div class="tag-category">
-                <button mat-button *ngFor="let tag of cat.tags" [class.has]="hasTag(tag)" (click)="toggleTag(tag)">
+                <button
+                  mat-button
+                  *ngFor="let tag of cat.tags"
+                  [class.has]="hasTag(tag)"
+                  (click)="toggleTag(tag)"
+                >
                   {{ tag.name }}
                 </button>
               </div>
-
             </mat-expansion-panel>
           </mat-accordion>
         </div>
@@ -205,30 +329,42 @@
         </div>
       </div>
 
-
-
       <div>
-        <button mat-raised-button color="accent" class="full-width-details" (click)="go()">
+        <button
+          mat-raised-button
+          color="accent"
+          class="full-width-details"
+          (click)="go()"
+        >
           <ng-container *ngIf="!editing">Create</ng-container>
           <ng-container *ngIf="editing">Update</ng-container>
         </button>
-        <button mat-raised-button color="warn" class="full-width-details action-button" (click)="delete()"
-          *ngIf="editing" [disabled]="!canDelete">
+        <button
+          mat-raised-button
+          color="warn"
+          class="full-width-details action-button"
+          (click)="delete()"
+          *ngIf="editing"
+          [disabled]="!canDelete"
+        >
           Delete
         </button>
       </div>
-      <br>
+      <br />
     </div>
-
   </div>
 
   <div right class="md-preview">
     <div class="rl-header head">Description Preview</div>
     <div class="subh">
-      Styling with <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet"
-        target="_blank">Markdown</a> is supported
+      Styling with
+      <a
+        href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet"
+        target="_blank"
+        >Markdown</a
+      >
+      is supported
     </div>
     <markdown class="markdown" [data]="event.description"></markdown>
   </div>
-
 </app-desktop-split>
